# caca-transformers

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-ID.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_project.sh
.github/workflows/: publish-to-pypi.yml  publish.yml  tests.yml
caca_transformers/: __init__.py  __version__.py  configuration_caca.py  modeling_caca.py  utils.py
examples/: benchmark.py  inference.py  pretrain.py
tests/: __init__.py  test_configuration.py  test_modeling.py  test_utils.py
