[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "caca-transformers"
version = "0.1.0"
description = "Caca: Transformer Architecture"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lyon", email = "cacatransformers@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "safetensors>=0.3.0",
]

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.0.0"]

[project.urls]
Homepage = "https://github.com/Lyon-28/caca-transformers"
Repository = "https://github.com/Lyon-28/caca-transformers"
