[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caca-transformers"
dynamic = ["version"]
description = "Modern Transformer Architecture with GQA, RoPE, SwiGLU & Flash Attention"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lyon", email = "cacatransformers@gmail.com"}
]
maintainers = [
    {name = "Lyon", email = "cacatransformers@gmail.com"}
]
keywords = [
    "transformers",
    "pytorch", 
    "language-model",
    "deep-learning",
    "gqa",
    "rope",
    "swiglu",
    "flash-attention",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
xformers = ["xformers>=0.0.20"]
flash-attn = ["flash-attn>=2.0.0"]
training = [
    "accelerate>=0.24.0",
    "deepspeed>=0.12.0",
    "bitsandbytes>=0.41.0",
    "wandb>=0.15.0",
]
all = [
    "xformers>=0.0.20",
    "accelerate>=0.24.0",
    "deepspeed>=0.12.0",
    "bitsandbytes>=0.41.0",
    "wandb>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Lyon-28/caca-transformers"
Documentation = "https://github.com/Lyon-28/caca-transformers"
Repository = "https://github.com/Lyon-28/caca-transformers"
"Bug Tracker" = "https://github.com/Lyon-28/caca-transformers/issues"
"Hugging Face" = "https://huggingface.co/Caca-AI"

[tool.setuptools.dynamic]
version = {attr = "caca_transformers.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["caca_transformers*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=caca_transformers --cov-report=term-missing"